<resources>
    <string name="app_name">ModerationApp</string>

    <!-- ########## Buttons ##########-->
    <!-- Main-->
    <string name="button_start_new_discussion_activity">Neue Diskussion</string>
    <string name="button_start_member_administration_activity">Teilnehmerverwaltung</string>
    <string name="button_start_discussion_administration_activity">Diskussionsverwaltung</string>
    <string name="button_start_emulator_activity">Emulator</string>
    <string name="button_start_settings_activity">Einstellungen</string>

    <!-- Members-->
    <string name="button_add_member">Hinzufügen</string>
    <string name="button_edit_member">Ändern</string>

    <!-- Discussions-->
    <string name="button_continue_add_member">Teilnehmer hinzufügen</string>
    <string name="button_continue_edit_member">Teilnehmer anpassen</string>
    <string name="button_add_new_member">Neuen Teilnehmer hinzufügen</string>
    <string name="button_edit_discussion">Änderungen übernehmen</string>
    <string name="button_add_existing_member">Ausgewählte Teilnehmer hinzufügen</string>
    <string name="button_set_places">Weiter zur Platzzuweisung</string>
    <string name="button_complete_place_assignment">Platzzuweisung abschließen</string>
    <string name="button_complete_edit_place_assignment">Platzzuweisung ändern</string>
    <string name="button_change_places">Platzzuweisung ändern</string>
    <string name="button_set_member_changes">Übernehmen</string>
    <string name="button_send_new_discussion">Neue Diskussion</string>
    <string name="button_send_start_discussion">Diskussion Starten</string>
    <string name="button_send_remaining_time">Verbleibende Zeit</string>
    <string name="button_send_start_pause">Pause Starten</string>
    <string name="button_send_end_pause">Pause Beenden</string>
    <string name="button_send_end_discussion">Diskussion Beenden</string>
    <string name="button_send_topic">Text Senden</string>
    <string name="button_send_silence">Um Ruhe bitten</string>

    <!-- Discussions_Control-->
    <string name="button_start_discussion">Diskussion starten</string>
    <string name="button_end_discussion">Diskussion beenden</string>

    <string name="hint_for_topic"><font color="#d9d7d8">Thema, Frage oder Schlagwort</font></string>
    <!-- Settings-->
    <string name="button_change_web_socket_uri">WebSocket URI Ändern</string>

    <!-- ########## Activity Titles ##########-->
    <!-- Main-->
    <string name="title_activity_main">Moderation</string>

    <!-- Members-->
    <string name="title_activity_member_administration">Teilnehmerverwaltung</string>
    <string name="title_activity_member_administration_add_member">Teilnehmerverwaltung: Neuen Teilnehmer hinzufügen</string>
    <string name="title_activity_member_administration_edit_member">Teilnehmerverwaltung: Teilnehmer bearbeiten</string>

    <!-- Discussions-->
    <string name="title_activity_discussion_administration">Diskussionsverwaltung</string>
    <string name="title_activity_discussion_administration_add_discussion">Diskussionsverwaltung: Neue Diskussion hinzufügen</string>
    <string name="title_activity_discussion_administration_member_administration">Diskussionsverwaltung: Teilnehmerliste</string>
    <string name="title_activity_discussion_administration_add_existing_member">Diskussionsverwaltung: Bestehenden Teilnehmer hinzufügen</string>
    <string name="title_activity_discussion_administration_add_new_member">Diskussionsverwaltung: Neuen Teilnehmer hinzufügen</string>
    <string name="title_activity_discussion_administration_place_assignment">Diskussionsverwaltung: Platzzuweisung</string>
    <string name="title_activity_discussion_administration_edit_discussion">Diskussionsverwaltung: Diskussion bearbeiten</string>

    <!-- Settings-->
    <string name="title_activity_settings">Einstellungen</string>

    <!-- ########## Labels ##########-->
    <!-- Main-->
    <string name="title_icon_description">Titel Icon</string>

    <!-- Members-->
    <string name="id_member_text_view_placeholder">ID</string>
    <string name="member_icon_description">Teilnehmer</string>
    <string name="title_member_text_view_placeholder">Titel</string>
    <string name="name_member_text_view_placeholder">Name</string>
    <string name="organisation_member_text_view_placeholder">Organisation</string>
    <string name="role_member_text_view_placeholder">Rolle</string>
    <string name="delete_question_members">Möchten Sie die ausgewählten Teilnehmer wirklich löschen?</string>
    <string name="delete_question_member">Möchten Sie den ausgewählten Teilnehmer wirklich löschen?</string>
    <string name="title_label_add_member">Titel:</string>
    <string name="name_label_add_member">Name:</string>
    <string name="name_hint_add_member">Teilnehmername</string>
    <string name="organisation_label_add_member">Organisation:</string>
    <string name="organisation_hint_add_member">Zugehörige Organisation</string>
    <string name="role_label_add_member">Rolle:</string>
    <string name="role_hint_add_member">Rollenbeschreibung</string>
    <string name="title_label_edit_member">Titel:</string>
    <string name="name_label_edit_member">Name:</string>
    <string name="name_hint_edit_member">Teilnehmername</string>
    <string name="organisation_label_edit_member">Organisation:</string>
    <string name="organisation_hint_edit_member">Zugehörige Organisation</string>
    <string name="role_label_edit_member">Rolle:</string>
    <string name="role_hint_edit_member">Rollenbeschreibung</string>

    <!-- Discussions-->
    <string name="delete_question_discussions">Möchten Sie die ausgewählten Diskussionen wirklich löschen?</string>
    <string name="delete_question_discussion">Möchten Sie die ausgewählte Diskussion wirklich löschen?</string>
    <string name="remove_question_members">Möchten Sie die ausgewählten Teilnehmer wirklich von der Teilnehmerliste entfernen?</string>
    <string name="remove_question_member">Möchten Sie den ausgewählten Teilnehmer wirklich von der Teilnehmerliste entfernen?</string>
    <string name="discussion_icon_description">Diskussion</string>
    <string name="title_discussion_text_view_placeholder">Titel</string>
    <string name="title_label_add_discussion">Thema:</string>
    <string name="time_discussion_text_view_placeholder">Zeit in Minuten</string>
    <string name="place_number_member_text_view_placeholder">Platznummer</string>
    <string name="title_hint_add_discussion">Diskussionsthema</string>
    <string name="time_label_add_discussion">Dauer (min):</string>
    <string name="time_hint_add_discussion">Diskussionsdauer in Minuten</string>
    <string name="place_1_label_add_member">Platz 1:</string>
    <string name="place_2_label_add_member">Platz 2:</string>
    <string name="place_3_label_add_member">Platz 3:</string>
    <string name="place_4_label_add_member">Platz 4:</string>
    <string name="place_5_label_add_member">Platz 5:</string>
    <string name="remaining_time_label_discussion">Verbleibende Zeit:</string>
    <string name="start_pause_discussion">Pause\nbeginnen</string>
    <string name="end_pause_discussion">Pause\nbeenden</string>

    <!-- Settings-->
    <string name="label_web_socket_uri">WebSocket URI:</string>

    <!-- ########## Toasts ##########-->
    <!-- Members-->
    <string name="add_toast_member">Der Teilnehmer %1$s mit der ID %2$d wurde hinzugefügt!</string>
    <string name="edit_toast_member">Der Teilnehmer mit der ID %1$d wurde geändert!</string>
    <string name="delete_toast_members">Die ausgewählten Teilnehmer wurden gelöscht!</string>
    <string name="delete_toast_member">Der ausgewählten Teilnehmer %1$s wurde gelöscht!</string>
    <string name="canceled_add_toast_member">Es wurde kein neuer Teilnehmer hinzugefügt!</string>
    <string name="canceled_edit_toast_member">Der ausgewählte Teilnehmer wurde nicht geändert!</string>

    <!-- Discussions-->
    <string name="add_toast_discussion">Die Diskussion mit dem Thema %1$s und der ID %2$d wurde hinzugefügt!</string>
    <string name="add_existing_member_toast_discussion">Es wurde %1$d Teilnehmer der Teilnehmerliste hinzugefügt!</string>
    <string name="edit_toast_discussion">Die Diskussion mit der ID %1$d wurde geändert!</string>
    <string name="delete_toast_discussions">Die ausgewählten Diskussionen wurden gelöscht!</string>
    <string name="delete_toast_discussion">Die ausgewählte Diskussion %1$s wurde gelöscht!</string>
    <string name="canceled_add_toast_discussion">Es wurde keine neue Diskussion hinzugefügt!</string>
    <string name="canceled_start_toast_discussion">Es wurde keine Diskussion gestartet!</string>
    <string name="canceled_add_member_toast_discussion">Es wurde keine Teilnehmer der Diskussion hinzugefügt!</string>
    <string name="canceled_edit_member_toast_discussion">Die Teilnehmer der Diskussion wurden nicht geändert!</string>
    <string name="canceled_add_new_member_toast_discussion">Es wurde kein neuer Teilnehmer der Teilnehmerliste hinzugefügt!</string>
    <string name="canceled_add_existing_member_toast_discussion">Es wurde kein existierender Teilnehmer der Teilnehmerliste hinzugefügt!</string>
    <string name="canceled_place_assignement_toast_discussion">Den Teilnehmern wurden keine Plätze zugewiesen!</string>
    <string name="canceled_edit_toast_discussion">Die ausgewählte Diskussion wurde nicht geändert!</string>
    <string name="remove_toast_members">Die ausgewählten Teilnehmer wurden von der Teilnehmerliste entfernt!</string>
    <string name="remove_toast_member">Der ausgewählten Teilnehmer %1$s wurde von der Teilnehmerliste entfernt!</string>

    <!-- Settings-->
    <string name="changed_websocket_toast_settings">Der Websocket wurde geändert!</string>
</resources>
