<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.discussion.EditDiscussionActivity">

    <Button
        android:id="@+id/button_continue_edit_member"
        style="@style/main_button_style"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_continue_edit_member"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGrid" />

    <Button
        android:id="@+id/button_edit_discussion"
        style="@style/main_button_style"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_edit_discussion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_continue_edit_member" />


    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/newGrid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:columnCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!-- Grid Header -->

        <TextView
            android:id="@+id/title_label_text_view"
            style="@style/main_text_view_style"
            android:text="@string/title_label_add_discussion" />

        <EditText
            android:id="@+id/title_edit_text_view"
            style="@style/main_edit_text_style"
            android:hint="@string/title_hint_add_discussion"
            android:inputType="text" />

        <TextView
            android:id="@+id/time_label_text_view"
            style="@style/main_text_view_style"
            android:text="@string/time_label_add_discussion" />

        <EditText
            android:id="@+id/time_edit_text_view"
            style="@style/main_edit_text_style"
            android:hint="@string/time_hint_add_discussion"
            android:inputType="number" />
    </GridLayout>
</android.support.constraint.ConstraintLayout>