<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/id_text_view_member"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_member_text_view_placeholder"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_view_member"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/member_icon_description"
            app:srcCompat="@drawable/member" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_text_view_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_member_text_view_placeholder"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name_text_view_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_member_text_view_placeholder"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/organisation_text_view_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/organisation_member_text_view_placeholder"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/role_text_view_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/role_member_text_view_placeholder"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>