<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/id_discussion_row_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/rounded_list_view_row"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="10dp"
    android:paddingStart="50dp">

    <TextView
        android:id="@+id/id_text_view_discussion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_member_text_view_placeholder"
        android:textAlignment="center"
        android:textColor="@color/list_view_row_id_color"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image_view_discussion"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/discussion_icon_description"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        app:srcCompat="@drawable/discussion" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text_view_discussion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_discussion_text_view_placeholder"
            android:textColor="@color/discussion_row_title_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/time_text_view_discussion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_discussion_text_view_placeholder"
            android:textColor="@color/discussion_row_time_color"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>